--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
               <h1 class="home__title">Hi, I'm Khaizer Don</h1>
               <h3 class="home__subtitle">
                 STEM Senior Highschool Student
+        
               </h3>
               <p class="home__description">
-                A third-year undergraduate engineering student at
-                <strong>Canara Engineering College </strong>, Manglore.
+                A grade 12 Science, Technology, engineering, and mathematics student at
+                <strong>MINDANAO STATE UNIVERSITY AT NAAWAN INTEGRATED DEVELOPMENTAL SCOOL </strong>,
               </p>
               <a href="#contact" class="button button--flex">
                 Contact me<i class="uil uil-message button__icon"></i>
