--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     class="home__blob-img"
                     x="-79"
                     y="-46"
-                    xlink:href="assets/img/kotoko.jpeg"
+                    xlink:href="assets/img/ilmir.jpg"
                   />
                 </g>
               </svg>
@@ -155,7 +155,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              I'm a third-year ISE undergraduate, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
+              I'm a Grade 12 STEM student, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
             </p>
 
             <div class="about__info">
