--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
           <div class="about__data">
             <p class="about__description">
-              I'm a Grade 12 STEM student, passionate about technology and an avid reader. I have a self-motivated and can-do attitude, thriving in challenging and dynamic environments. Seeking a competitive position to enhance my skills and contribute to a professional organization. I'm very much passionate to learn new stuff that interests me and can help me to get better.
+              I'm currently a Grade 12 STEM student with a strong interest in technology. I'm a pretty self-motivated person, and I'm always looking for projects or opportunities to challenge myself and develop my abilities further. I'm excited to apply what I've learned and gain practical experience to prepare for my future career. ki ki ra
             </p>
 
             <div class="about__info">
