--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
               <!--====== Qualification 1 ======-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">SSLC</h3>
+                  <h3 class="qualification__title">Elementary</h3>
                   <span class="qualification__subtitle"
-                    >S.V.S <br />High School</span
+                    >S.V.S <br />Naawan Central School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -397,7 +397,7 @@
                   <div class="services__modal">
                     <div class="services__modal-content">
                       <h4 class="services__modal-title">
-                        Class 10th Summary :
+                        Elementary Summary :
                       </h4>
                       <i class="uil uil-times services__modal-close"></i>
                       <ul class="services__modal-services grid">
@@ -406,8 +406,9 @@
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
                           <p>
-                            Subjects studied: Science, Maths, English,
-                            Social Studies,Kannada,Hindi.
+                            
+Subjects studied: Mother Tongue, Maths, English, Filipino,Science,Araling Panlipunan,Edukasyon sa Pagpapakatao, MAPEH, TLE
+                        
                           </p>
                         </li>
                         <li class="services__modal-service">
@@ -420,7 +421,7 @@
                           <i
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
-                          <p>Came runners up in inter-school Ball Badminton</p>
+                          <p>table tennis district meet level</p>
                         </li>
                       </ul>
                     </div>
