--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <div>
                   <h3 class="qualification__title">Elementary</h3>
                   <span class="qualification__subtitle"
-                    >S.V.S <br />Naawan Central School</span
+                    > <br />Naawan Central School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -443,9 +443,9 @@ Subjects studied: Mother Tongue, Maths, English, Filipino,Science,Araling Panlip
                   <span class="qualification__line"></span>
                 </div>
                 <div>
-                  <h3 class="qualification__title">Class 12th</h3>
+                  <h3 class="qualification__title">Junior High School</h3>
                   <span class="qualification__subtitle"
-                    >Vidyodaya <br />Pre University College</span
+                    > <br />Manticao National High School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -460,7 +460,7 @@ Subjects studied: Mother Tongue, Maths, English, Filipino,Science,Araling Panlip
                   <div class="services__modal">
                     <div class="services__modal-content">
                       <h4 class="services__modal-title">
-                        Class 12th Summary :
+                        Junior High School Summary :
                       </h4>
                       <i class="uil uil-times services__modal-close"></i>
                       <ul class="services__modal-services grid">
@@ -469,8 +469,9 @@ Subjects studied: Mother Tongue, Maths, English, Filipino,Science,Araling Panlip
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
                           <p>
-                            Subjects studied: Physics, Chemistry, Maths,
-                            English, Statistics , Hindi.
+                            
+Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyon sa Pagpapakatao, MAPEH, TLE.
+                            
                           </p>
                         </li>
                         <li class="services__modal-service">
