--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <div>
                 <h3 class="contact__title">Contact Me</h3>
                 <span class="contact__subtitle"
-                  ><a href="tel:6362243314"></a>6362243314</span
+                  ><a href="tel:09650432040"></a>09650432040</span
                 >
               </div>
             </div>
@@ -750,7 +750,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"
-                  >rkamathvenkatesh@gmail.com</span
+                  >khaizerelmer@gmail.com</span
                 >
               </div>
             </div>
@@ -761,7 +761,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <div>
                 <h3 class="contact__title">Location</h3>
                 <span class="contact__subtitle"
-                  >Manglore, Karnataka, India</span
+                  >Punta Silum, Manticao Mis. Or.</span
                 >
               </div>
             </div>
