--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <div>
                   <h3 class="qualification__title">Elementary</h3>
                   <span class="qualification__subtitle"
-                    > <br />Naawan Central School</span
+                    > NCS <br />Naawan Central School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -444,7 +444,7 @@ Subjects studied: Mother Tongue, Maths, English, Filipino,Science,Araling Panlip
                 <div>
                   <h3 class="qualification__title">Junior High School</h3>
                   <span class="qualification__subtitle"
-                    > <br />Manticao National High School</span
+                    > MNHS <br />Manticao National High School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
