--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     class="home__blob-img"
                     x="-79"
                     y="-46"
-                    xlink:href="assets/img/me.jpg"
+                    xlink:href="assets/img/lh.jpg"
                   />
                 </g>
               </svg>
