--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     class="home__blob-img"
                     x="-79"
                     y="-46"
-                    xlink:href="assets/img/lh.jpg"
+                    xlink:href="assets/img/h.jpg"
                   />
                 </g>
               </svg>
@@ -151,7 +151,7 @@
         <span class="section__subtitle">My introduction</span>
 
         <div class="about__container container grid">
-          <img src="assets/img/monke.jpg" alt="" class="about__img" />
+          <img src="assets/img/bg.jpg" alt="" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
