--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <!--===================== SKILLS =====================-->
 
       <section class="skills section" id="skills">
-        <h2 class="section__title">Skills</h2>
+        <h2 class="section__title">My Skills,Hobbies, and interest</h2>
         <span class="section__subtitle">My technical level</span>
 
         <div class="skills__container container grid">
@@ -250,7 +250,7 @@
                 <i class="fas fa-code skills__icon"></i>
 
                 <div>
-                  <h1 class="skills__title">IT Constructs</h1>
+                  <h1 class="skills__title">Hobbies</h1>
                 </div>
 
                 <i class="uil uil-angle-down skills__arrow"></i>
@@ -259,7 +259,7 @@
               <div class="skills__list grid">
                 <div class="skills__data">
                   <div class="skills__titles">
-                    <h3 class="skills__name">DBMS</h3>
+                    <h3 class="skills__name"></h3>
                   </div>
                   
                 </div>
