--- a/index.html
+++ b/index.html
@@ -557,8 +557,8 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
 
       <!--=================== Portfolio ===================-->
       <section class="portfolio section" id="portfolio">
-        <h2 class="section__title">Projects</h2>
-        <span class="section__subtitle">Most recent work</span>
+        <h2 class="section__title">My Favourite Formula 1 Drivers</h2>
+        <span class="section__subtitle">Lights out and away we go</span>
 
         <div class="portfolio__container container swiper-container">
           <div class="swiper-wrapper">
@@ -568,10 +568,10 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  DarkSurfer-Extension
+                  Lewis Hamilton
                 </h3>
                 <p class="portfolio__description">
-                  DarkSurfer-Extension, is a project based on the application of advanced Language Models LMs to detect and eliminate dark patterns on websites. It aims to improve user-awareness, exposing real-time of devious design practices in situ. It helps make the internet more user-friendly by using its novel LMs and popular LM-based models, such as RoBERTa, BERT, and XLNet.
+                  Lewis Hamilton (born January 7, 1985, Stevenage, England) is one of the most successful Formula One (F1) Grand Prix racing drivers of all time. He owns the F1 record for career race victories and is tied with Michael Schumacher for the most drivers' championships (seven). In 2008 he became the first Black driver to win the F1 world drivers' championship.
                 </p>
                 <a
                   href="https://github.com/Venkateeshh/DarkSurfer-Extension"
@@ -596,15 +596,11 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
-                  Responsive-Weather-Forecast-Website
+                  Ayrton Senna
                 </h3>
                 <p class="portfolio__description">
-                  This project is a weather website that provides live weather
-                  updates and forecasts based on your location. Stay informed
-                  about current weather conditions, temperature, and more.
-                  Explore interactive maps, hourly/daily forecasts, and helpful
-                  insights. Stay ahead of the forecast and make the most of your
-                  day!
+                  Ayrton Senna (born March 21, 1960, São Paulo, Brazil—died May 1, 1994, Bologna, Italy) was a Brazilian race-car driver who gained fame for being a fierce competitor renowned for his ruthless and risky maneuvers on the Grand Prix circuit. He rose quickly through the ranks of professional racing, capturing 41 Grand Prix titles and three circuit world championships (1988, 1990, and 1991). His career ended tragically when he died in a crash during the 1994 San Marino Grand Prix.
+                
                 </p>
                 <a
                   href="https://github.com/Venkateeshh/Weather-App"
@@ -628,14 +624,9 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <img src="assets/img/portfolio2.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Spotify-Clone</h3>
+                <h3 class="portfolio__title">Fernando Alonso</h3>
                 <p class="portfolio__description">
-                  Spotify Clone is a web app developed using HTML, CSS, and
-                  JavaScript. It recreates Spotify's interface and features,
-                  allowing users to browse, search, and play songs, create
-                  playlists, and discover new music. Responsive design ensures a
-                  seamless experience on any device. Contributions are welcome!
-                </p>
+                  Fernando Alonso Diaz is a Spanish racing driver, who competes in Formula One for Aston Martin. Alonso has won two Formula One World Drivers' Championship titles, which he won in 2005 and 2006 with Renault, and has won 32 Grands Prix across 21 seasons.
                 <a
                   href="https://github.com/Venkateeshh/Spotify-Clone"
                   class="button button--flex button--small portfolio__button"
@@ -657,7 +648,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <img src="assets/img/portfolio3.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Language Translator</h3>
+                <h3 class="portfolio__title">Charles Leclerc</h3>
                 <p class="portfolio__description">
                   This language translator web app is a user-friendly tool built
                   with HTML, CSS, and JavaScript. It leverages Google Translate
