--- a/index.html
+++ b/index.html
@@ -574,10 +574,10 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                   Lewis Hamilton (born January 7, 1985, Stevenage, England) is one of the most successful Formula One (F1) Grand Prix racing drivers of all time. He owns the F1 record for career race victories and is tied with Michael Schumacher for the most drivers' championships (seven). In 2008 he became the first Black driver to win the F1 world drivers' championship.
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/DarkSurfer-Extension"
+                  href="https://www.formula1.com/en/drivers/lewis-hamilton"
                   class="button button--flex button--small portfolio__button"
                 >
-                  GitHub Repository
+                  F1 Official Website
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
