--- a/index.html
+++ b/index.html
@@ -581,10 +581,10 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://darksurfer.streamlit.app/"
+                  href="https://www.youtube.com/watch?v=rD9J1EyUCIk"
                   class="button button--flex button--small portfolio__button"
                 >
-                  See Live
+                  Races
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
               </div>
