--- a/index.html
+++ b/index.html
@@ -603,17 +603,17 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                 
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/Weather-App"
+                  href="https://www.formula1.com/en/information/drivers-hall-of-fame-ayrton-senna.FLD7ZtO0nUn7JzLEn5rOJ"
                   class="button button--flex button--small portfolio__button"
                 >
-                  GitHub Repository
+                  F1 Official Website
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://venkateeshh.github.io/Weather-App/"
+                  href="https://www.youtube.com/watch?v=-pItzcHBHt0"
                   class="button button--flex button--small portfolio__button"
                 >
-                  See Live
+                  Races
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
               </div>
