--- a/index.html
+++ b/index.html
@@ -628,17 +628,17 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                 <p class="portfolio__description">
                   Fernando Alonso Diaz is a Spanish racing driver, who competes in Formula One for Aston Martin. Alonso has won two Formula One World Drivers' Championship titles, which he won in 2005 and 2006 with Renault, and has won 32 Grands Prix across 21 seasons.
                 <a
-                  href="https://github.com/Venkateeshh/Spotify-Clone"
+                  href="https://www.formula1.com/en/drivers/fernando-alonso"
                   class="button button--flex button--small portfolio__button"
                 >
-                  GitHub Repository
+                  F1 Official Website
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://venkateeshh.github.io/Spotify-Clone/"
+                  href="https://www.youtube.com/watch?v=gcx1bcSfPlw"
                   class="button button--flex button--small portfolio__button"
                 >
-                  See Live
+                  Races
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
               </div>
