--- a/index.html
+++ b/index.html
@@ -650,24 +650,20 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Charles Leclerc</h3>
                 <p class="portfolio__description">
-                  This language translator web app is a user-friendly tool built
-                  with HTML, CSS, and JavaScript. It leverages Google Translate
-                  API to seamlessly translate text between multiple languages.
-                  The app features a simple interface, ensuring smooth
-                  performance across devices..
+                  Charles’ transition to formula racing marked the beginning of a remarkable career. In 2014, he made his debut in the Formula Renault 2.0 Alps championship racing for Fortec Motorsports. Charles immediately made an impact by securing the junior championship title in his first season. His exceptional performances did not go unnoticed, and he was signed by the Ferrari Driver Academy, a prestigious driver development program.
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/Js-Language-Translator"
+                  href="https://www.formula1.com/en/drivers/charles-leclerc"
                   class="button button--flex button--small portfolio__button"
                 >
-                  GitHub Repository
+                  F1 Official Website
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://venkateeshh.github.io/Js-Language-Translator/"
+                  href="https://www.youtube.com/watch?v=rFAcU_RGP7g/"
                   class="button button--flex button--small portfolio__button"
                 >
-                  See Live
+                  Races
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
               </div>
