--- a/index.html
+++ b/index.html
@@ -674,27 +674,22 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
               <img src="assets/img/portfolio4.png" class="portfolio__img" />
 
               <div class="portfolio__data">
-                <h3 class="portfolio__title">Sorting Visualizer</h3>
+                <h3 class="portfolio__title">Sebastian Vettel</h3>
                 <p class="portfolio__description">
-                  Sorting Visualizer is a Java-based project that allows users
-                  to visualize various sorting algorithms in action using a
-                  Graphical User Interface (GUI). It provides an interactive and
-                  educational way to understand how different sorting algorithms
-                  work by visually demonstrating their step-by-step sorting
-                  process.
+                  The youngest ever world champion's accumulation of age-related records that began in 2010 continued for four consecutive seasons, culminating in a one-sided 2013 title triumph that confirmed his status as one of the sport’s all-time greats. Sebastian Vettel’s first championship, at the age of 23, provided a surprise ending to an intensely competitive 2010 campaign. There was surely more to come from this fast rising racer, and it came quickly when he completely dominated in 2011 to become the youngest double world champion.
                 </p>
                 <a
-                  href="https://github.com/Venkateeshh/Sorting-Visualizer"
+                  href="https://www.formula1.com/en/information/drivers-hall-of-fame-sebastian-vettel.GBy6vPkxKOKUV89QOhZe5"
                   class="button button--flex button--small portfolio__button"
                 >
-                  GitHub Repository
+                  F1 Official Website
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://www.linkedin.com/posts/venkatesh-kamath-_algorithmdesign-sortingvisualizer-javaprojects-activity-7095437035125043200-fWDl?utm_source=share&utm_medium=member_desktop"
+                  href="https://www.youtube.com/watch?"v=XkKFNIrX8yc
                   class="button button--flex button--small portfolio__button"
                 >
-                  See Live
+                  Races
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
               </div>
