--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
           <div class="swiper-wrapper">
             <!-- ------------------------portfollio 1-------------------- -->
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/portfolio5.png" class="portfolio__img" />
+              <img src="assets/img/lh.jpg" class="portfolio__img" />
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
