--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
             <!-- ------------------------portfollio 2-------------------- -->
 
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/portfolio1.png" class="portfolio__img" />
+              <img src="assets/img/senna.jpg" class="portfolio__img" />
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">
