--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
 
             <!-- ------------------------portfollio 3-------------------- -->
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/portfolio2.png" class="portfolio__img" />
+              <img src="assets/img/nando.jpg" class="portfolio__img" />
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Fernando Alonso</h3>
