--- a/index.html
+++ b/index.html
@@ -686,7 +686,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://www.youtube.com/watch?"v=XkKFNIrX8yc
+                  href="https://www.youtube.com/watch?"
                   class="button button--flex button--small portfolio__button"
                 >
                   Races
