--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
 
             <!-- ------------------------portfollio 5-------------------- -->
             <div class="portfolio__content grid swiper-slide">
-              <img src="assets/img/portfolio4.png" class="portfolio__img" />
+              <img src="assets/img/sv.jpg" class="portfolio__img" />
 
               <div class="portfolio__data">
                 <h3 class="portfolio__title">Sebastian Vettel</h3>
@@ -686,7 +686,7 @@ Subjects studied: English, Filipino, Math, Science, Araling Panlipunan, Edukasyo
                   <i class="uil uil-external-link-alt button__icon"></i>
                 </a>
                 <a
-                  href="https://www.youtube.com/watch?"
+                  href="https://www.youtube.com/watch?"v=rFAcU_RGP7g/
                   class="button button--flex button--small portfolio__button"
                 >
                   Races
